# Playlist

./: .env.example  .gitignore  App.tsx  CLAUDE.md  GEMINI.md  README.md  app.json  eas.json  index.html  jest.config.js  jest.setup.js  node_modules  package-lock.json  package.json
.maestro/: README.md  add_song.yaml  smoke.yaml
__tests__/: AlbumArt.test.tsx  DenoiseScreen.test.tsx  ExportScreen.test.tsx  ScreenHeader.test.tsx  SettingsScreen.test.tsx  SongSearchModal.test.tsx  ThemeContext.test.tsx  TrimEditorScreen.test.tsx  WaveformView.test.tsx  backup.test.ts  database.backup.test.ts  database.test.ts  itunes.test.ts  nativeDenoise.test.ts  search.test.ts  theme.test.ts  trim.test.ts  useRecording.metering.test.tsx  useRecording.test.tsx  waveform.test.ts
android/: settings.gradle
components/: AlbumArt.tsx  AudioPlayer.tsx  MiniPlayer.tsx  NowPlayingScreen.tsx  PlaylistPlayer.tsx  RecorderModal.tsx  ScreenHeader.tsx  SongSearchModal.tsx  ThemeToggle.tsx  Waveform.tsx  WaveformView.tsx
contexts/: PlayerContext.tsx  ThemeContext.tsx
docs/: BRANDING_REPORT.md  DENOISE_FEATURE_DESIGN.md  PHASE2_BACKEND_DESIGN.md  PLAY_STORE_RELEASE.md  SOCIAL_FEATURES_ROADMAP.md  TRACK_PLAYER_MIGRATION.md
hooks/: useRecording.ts
lib/: analytics.ts  backup.ts  database.ts  fonts.ts  itunes.ts  nativeDenoise.ts  search.ts  storage.ts  theme.ts  trim.ts  waveform.ts
modules/audio-denoise/android/src/main/cpp/: CMakeLists.txt  df_jni.c
screens/: DenoiseScreen.tsx  ExportScreen.tsx  HomeScreen.tsx  PlaylistDetailScreen.tsx  PlaylistsScreen.tsx  SettingsScreen.tsx  (+2 more)
(+45 files in other folders)
